[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/fonts/RubikGlitch-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/fonts/TitleFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://scripts/menu/Menu.gd" type="Script" id=3]
[ext_resource path="res://assets/audio/jump5.mp3" type="AudioStream" id=4]
[ext_resource path="res://assets/audio/jump7.mp3" type="AudioStream" id=5]
[ext_resource path="res://assets/audio/jump6.mp3" type="AudioStream" id=6]
[ext_resource path="res://assets/audio/jump4.mp3" type="AudioStream" id=7]
[ext_resource path="res://assets/audio/jump1.mp3" type="AudioStream" id=8]
[ext_resource path="res://assets/audio/jump2.mp3" type="AudioStream" id=9]
[ext_resource path="res://assets/audio/jump3.mp3" type="AudioStream" id=10]
[ext_resource path="res://assets/audio/death_noise.mp3" type="AudioStream" id=11]

[sub_resource type="DynamicFont" id=1]
size = 100
use_filter = true
extra_spacing_char = 30
font_data = ExtResource( 1 )

[node name="Menu" type="Node2D"]
script = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
margin_top = 152.0
margin_right = 1920.0
margin_bottom = 271.0
custom_fonts/font = SubResource( 1 )
text = "It's like they knew..."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SubTitle" type="Label" parent="."]
margin_top = 321.0
margin_right = 1920.0
margin_bottom = 381.0
custom_fonts/font = ExtResource( 2 )
text = "Your only hope is to delay the inevitable"
align = 1
valign = 1

[node name="Menus" type="Node2D" parent="."]

[node name="offset" type="Node2D" parent="Menus"]
position = Vector2( 400, 450 )

[node name="Main" type="VBoxContainer" parent="Menus/offset"]
margin_right = 1200.0
margin_bottom = 530.0
custom_constants/separation = 50
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="Menus/offset/Main"]
margin_right = 1200.0
margin_bottom = 66.0
custom_fonts/font = ExtResource( 2 )
text = "Play"
flat = true

[node name="LevelSelectButton" type="Button" parent="Menus/offset/Main"]
margin_top = 116.0
margin_right = 1200.0
margin_bottom = 182.0
custom_fonts/font = ExtResource( 2 )
text = "Level Select"
flat = true

[node name="HowToPlayButton" type="Button" parent="Menus/offset/Main"]
margin_top = 232.0
margin_right = 1200.0
margin_bottom = 298.0
custom_fonts/font = ExtResource( 2 )
text = "How to play"
flat = true

[node name="SettingsButton" type="Button" parent="Menus/offset/Main"]
margin_top = 348.0
margin_right = 1200.0
margin_bottom = 414.0
custom_fonts/font = ExtResource( 2 )
text = "Settings"
flat = true

[node name="QuitButton" type="Button" parent="Menus/offset/Main"]
margin_top = 464.0
margin_right = 1200.0
margin_bottom = 530.0
custom_fonts/font = ExtResource( 2 )
text = "Quit"
flat = true

[node name="Settings" type="VBoxContainer" parent="Menus/offset"]
margin_left = -2000.0
margin_right = -800.0
margin_bottom = 530.0
custom_constants/separation = 50
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WindowedButton" type="Button" parent="Menus/offset/Settings"]
margin_top = 119.0
margin_right = 1200.0
margin_bottom = 185.0
custom_fonts/font = ExtResource( 2 )
text = "Switch To Windowed"
flat = true

[node name="Volume" type="HBoxContainer" parent="Menus/offset/Settings"]
margin_top = 235.0
margin_right = 1200.0
margin_bottom = 295.0
custom_constants/separation = 50

[node name="Label" type="Label" parent="Menus/offset/Settings/Volume"]
margin_right = 246.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 2 )
text = "Volume"

[node name="VolumeSlide" type="HSlider" parent="Menus/offset/Settings/Volume"]
margin_left = 296.0
margin_right = 1200.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -20.0
max_value = 20.0
step = 5.0
tick_count = 9
ticks_on_borders = true

[node name="SettingsBackButton" type="Button" parent="Menus/offset/Settings"]
margin_top = 345.0
margin_right = 1200.0
margin_bottom = 411.0
custom_fonts/font = ExtResource( 2 )
text = "Back"
flat = true

[node name="LevelSelect" type="VBoxContainer" parent="Menus/offset"]
margin_left = 2000.0
margin_right = 3200.0
margin_bottom = 600.0
custom_constants/separation = 50
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Menus/offset/LevelSelect"]
margin_right = 1200.0
margin_bottom = 484.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LevelContainer" type="VBoxContainer" parent="Menus/offset/LevelSelect/ScrollContainer"]
margin_right = 1200.0
margin_bottom = 484.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelSelectBackButton" type="Button" parent="Menus/offset/LevelSelect"]
margin_top = 534.0
margin_right = 1200.0
margin_bottom = 600.0
custom_fonts/font = ExtResource( 2 )
text = "Back"
flat = true

[node name="HowToPlay" type="VBoxContainer" parent="Menus/offset"]
margin_top = 2000.0
margin_right = 1200.0
margin_bottom = 2530.0
custom_constants/separation = 50
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VideoPlayer" type="VideoPlayer" parent="Menus/offset/HowToPlay"]
margin_right = 1200.0
margin_bottom = 414.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HowToBackButton" type="Button" parent="Menus/offset/HowToPlay"]
margin_top = 464.0
margin_right = 1200.0
margin_bottom = 530.0
custom_fonts/font = ExtResource( 2 )
text = "Back"
flat = true

[node name="Tween" type="Tween" parent="."]

[node name="Jump1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[node name="HitNoise" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )

[node name="Jump2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )

[node name="Jump3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )

[node name="Jump4" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[node name="Jump5" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="Jump6" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="Jump7" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[connection signal="pressed" from="Menus/offset/Main/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="Menus/offset/Main/LevelSelectButton" to="." method="_on_LevelSelectButton_pressed"]
[connection signal="pressed" from="Menus/offset/Main/HowToPlayButton" to="." method="_on_HowToPlayButton_pressed"]
[connection signal="pressed" from="Menus/offset/Main/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="Menus/offset/Main/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="Menus/offset/Settings/WindowedButton" to="." method="_on_WindowedButton_pressed"]
[connection signal="value_changed" from="Menus/offset/Settings/Volume/VolumeSlide" to="." method="_on_VolumeSlide_value_changed"]
[connection signal="pressed" from="Menus/offset/Settings/SettingsBackButton" to="." method="_on_SettingsBackButton_pressed"]
[connection signal="pressed" from="Menus/offset/LevelSelect/LevelSelectBackButton" to="." method="_on_LevelSelectBackButton_pressed"]
[connection signal="pressed" from="Menus/offset/HowToPlay/HowToBackButton" to="." method="_on_HowToBackButton_pressed"]
[connection signal="finished" from="HitNoise" to="." method="_on_HitNoise_finished"]
